--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://Dhanushdevireddy.github.io/Dhanushdevireddy.github.io",
+  "homepage":"https://Dhanushdevireddy.github.io/Portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
